--- a/.github/workflows/an-11 recovery builder.yml
+++ b/.github/workflows/an-11 recovery builder.yml
@@ -18,7 +18,7 @@ on:
       DEVICE_URL:
         description: 'DEVICE_URL'
         required: true
-        default: 'https://github.com/Parvej899/-android_device_tecno_kg8-TWRP.git'
+        default: 'https://github.com/parvej789/parvej-kg8-88'
       DEVICE_BRANCH:
         description: 'DEVICE_BRANCH'
         required: true
@@ -34,13 +34,12 @@ on:
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
-        default: 'bootimage'
+        default: 'recoveryimage'
         type: choice
         options:
         - recoveryimage
         - bootimage
         - vendorbootimage
-
 jobs:
   build:
     if: github.event.repository.owner.id == github.event.sender.id
