--- a/.github/workflows/twrp_11_recovery builder.yml
+++ b/.github/workflows/twrp_11_recovery builder.yml
@@ -18,7 +18,7 @@ on:
       DEVICE_URL:
         description: 'DEVICE_URL'
         required: true
-        default: 'https://github.com/parvej789/infinix-x90'
+        default: 'https://github.com/Parvej899/-android_device_tecno_kg8-TWRP'
       DEVICE_BRANCH:
         description: 'DEVICE_BRANCH'
         required: true
@@ -26,15 +26,15 @@ on:
       DEVICE_PATH:
         description: 'DEVICE_PATH'
         required: true
-        default: 'device/infinix/X689'
+        default: 'device/tecno/KG8'
       DEVICE_NAME:
         description: 'DEVICE_NAME'
         required: true
-        default: 'X689'
+        default: 'KG8'
       BUILD_TARGET:
         description: 'BUILD_TARGET'
         required: true
-        default: 'recoveryimage'
+        default: 'bootimage'
         type: choice
         options:
         - recoveryimage
