--- a/.github/workflows/pb-10.yml
+++ b/.github/workflows/pb-10.yml
@@ -14,9 +14,9 @@ on:
 
 env:
   MANIFEST: https://github.com/PitchBlackRecoveryProject/manifest_pb.git -b android-10.0-deprecated
-  DEVICE: KE7
-  DT_LINK: https://github.com/Parvej899/twrp_device_tecno_KE7-H693HJKM-Q-GL-
-  DT_PATH: device/tecno/KE7
+  DEVICE: ATOM
+  DT_LINK: https://github.com/twrpdtgen/android_device_symphony_ATOM/tree/full_v680-user-10-QP1A.190711.020-03021650-release-keys
+  DT_PATH: device/symphony/ATOM
   TARGET: recoveryimage
   TZ: Asia/manila
 
@@ -63,6 +63,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          with:
           tag_name: TWRP_10.0
-          name: Twrp-KE7
+          name: Twrp-ATOM
           files: | 
-            work/out/target/product/KE7/recovery.img
+            work/out/target/product/ATOM/recovery.img
